# ctcore

./: CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: lib.rs
src/molfile/: chiral_flag.rs  counts.rs  header.rs  mod.rs  molecule_name.rs  parameters.rs  version.rs
src/primitive/: fixed_count.rs  fixed_integer.rs  fixed_real.rs  line.rs  mod.rs  natural.rs  sequence.rs
src/read/: error.rs  header.rs  mod.rs  reader.rs
src/text/: character.rs  count.rs  digit.rs  eol.rs  fixed_count.rs  fixed_natural.rs  fortran_float.rs  fortran_int.rs  mod.rs  natural.rs  non_zero_digit.rs  printable.rs  sequence.rs
tests/: integration.rs
tests/data/: v3k.mol
