[package]
name = "ctcore"
version = "0.1.0"
edition = "2021"
license = "MIT"
license_file = "LICENSE"
homepage = "https://github.com/metamolecular/ctcore"
readme = "README.md"
description = "Precision tools for the CTfile family of file formats."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
pretty_assertions = "1.2.1"
